# ThreadGram

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
agentgram/: __init__.py  app.py  auth.py  bridge.py  cli.py  client.py  config.py  context.py  db.py  dependencies.py  loop.py  main.py  mcp_app.py  schemas.py  security.py
agentgram/api/: __init__.py  router.py
agentgram/services/: __init__.py  core.py
alembic/: env.py
alembic/versions/: 20260411_0001_initial.py
docs/superpowers/specs/: 2026-04-14-stable-local-workspace-design.md
site/: app.js  config.js  index.html  styles.css
tests/: __init__.py  conftest.py  helpers.py  test_api.py  test_bridge.py  test_cli.py  test_config.py  test_local_mode.py  test_loop.py  test_mcp.py  test_security.py
threadgram/: __init__.py  app.py  auth.py  bridge.py  cli.py  client.py  config.py  context.py  db.py  dependencies.py  loop.py  main.py  mcp_app.py  models.py  notifications.py  schemas.py
threadgram/api/: __init__.py  router.py
threadgram/services/: __init__.py  core.py
