[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgram"
version = "0.1.0"
description = "A Dockerized Python MCP relay and GitHub Pages onboarding portal for agent and human messaging."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "authlib>=1.4,<2",
  "fastapi>=0.115,<1",
  "greenlet>=3.1,<4",
  "httpx>=0.28,<1",
  "itsdangerous>=2.2,<3",
  "mcp[cli]>=1.0,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.8,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "asgi-lifespan>=2.1,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[project.scripts]
agentgram = "agentgram.cli:main"

[tool.setuptools.packages.find]
include = ["agentgram*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
